openturns/1.20/_sources/auto_reliability_sensitivity/index.rst.txt
:orphan:

.. _Reliability & Sensitivity:

Reliability & Sensitivity
=========================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>


Central dispersion
------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Evaluate the mean of a random vector by simulations">

.. only:: html

  .. image:: /auto_reliability_sensitivity/central_dispersion/images/thumb/sphx_glr_plot_expectation_simulation_algorithm_thumb.png
    :alt: Evaluate the mean of a random vector by simulations

  :ref:`sphx_glr_auto_reliability_sensitivity_central_dispersion_plot_expectation_simulation_algorithm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Evaluate the mean of a random vector by simulations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Analyse the central tendency of a cantilever beam">

.. only:: html

  .. image:: /auto_reliability_sensitivity/central_dispersion/images/thumb/sphx_glr_plot_central_tendency_thumb.png
    :alt: Analyse the central tendency of a cantilever beam

  :ref:`sphx_glr_auto_reliability_sensitivity_central_dispersion_plot_central_tendency.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Analyse the central tendency of a cantilever beam</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate moments from Taylor expansions">

.. only:: html

  .. image:: /auto_reliability_sensitivity/central_dispersion/images/thumb/sphx_glr_plot_estimate_moments_taylor_thumb.png
    :alt: Estimate moments from Taylor expansions

  :ref:`sphx_glr_auto_reliability_sensitivity_central_dispersion_plot_estimate_moments_taylor.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate moments from Taylor expansions</div>
    </div>


.. raw:: html

    </div>


Reliability
-----------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a probability with Latin Hypercube Sampling">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_lhs_thumb.png
    :alt: Estimate a probability with Latin Hypercube Sampling

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_lhs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a probability with Latin Hypercube Sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simulate an Event">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_event_manipulation_thumb.png
    :alt: Simulate an Event

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_event_manipulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simulate an Event</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a probability with Monte Carlo">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_monte_carlo_thumb.png
    :alt: Estimate a probability with Monte Carlo

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_monte_carlo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a probability with Monte Carlo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use a randomized QMC algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_randomized_qmc_thumb.png
    :alt: Use a randomized QMC algorithm

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_randomized_qmc.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use a randomized QMC algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the Adaptive Directional Stratification Algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_adaptive_directional_sampling_thumb.png
    :alt: Use the Adaptive Directional Stratification Algorithm

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_adaptive_directional_sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the Adaptive Directional Stratification Algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the post-analytical importance sampling algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_post_analytical_importance_sampling_thumb.png
    :alt: Use the post-analytical importance sampling algorithm

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_post_analytical_importance_sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the post-analytical importance sampling algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the Directional Sampling Algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_directional_sampling_thumb.png
    :alt: Use the Directional Sampling Algorithm

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_directional_sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the Directional Sampling Algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a flooding probability">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_flood_model_thumb.png
    :alt: Estimate a flooding probability

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_flood_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a flooding probability</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Specify a simulation algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_probability_simulation_parametrization_thumb.png
    :alt: Specify a simulation algorithm

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_probability_simulation_parametrization.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Specify a simulation algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the Importance Sampling algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_importance_sampling_thumb.png
    :alt: Use the Importance Sampling algorithm

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_importance_sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the Importance Sampling algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a threshold event">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_create_threshold_event_thumb.png
    :alt: Create a threshold event

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_create_threshold_event.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a threshold event</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a probability with Monte-Carlo on axial stressed beam: a quick start guide to reliabil...">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_axial_stressed_beam_quickstart_thumb.png
    :alt: Estimate a probability with Monte-Carlo on axial stressed beam: a quick start guide to reliability

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_axial_stressed_beam_quickstart.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a probability with Monte-Carlo on axial stressed beam: a quick start guide to reliability</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Exploitation of simulation algorithm results">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_probability_simulation_results_thumb.png
    :alt: Exploitation of simulation algorithm results

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_probability_simulation_results.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exploitation of simulation algorithm results</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the FORM algorithm in case of several design points">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_multi_form_thumb.png
    :alt: Use the FORM algorithm in case of several design points

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_multi_form.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the FORM algorithm in case of several design points</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Non parametric Adaptive Importance Sampling (NAIS)">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_nais_thumb.png
    :alt: Non parametric Adaptive Importance Sampling (NAIS)

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_nais.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Non parametric Adaptive Importance Sampling (NAIS)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a domain event">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_create_domain_event_thumb.png
    :alt: Create a domain event

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_create_domain_event.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a domain event</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the FORM - SORM algorithms">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_form_thumb.png
    :alt: Use the FORM - SORM algorithms

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_form.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the FORM - SORM algorithms</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Subset Sampling">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_subset_sampling_thumb.png
    :alt: Subset Sampling

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_subset_sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Subset Sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Test the design point with the Strong Maximum Test">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_strong_maximum_test_thumb.png
    :alt: Test the design point with the Strong Maximum Test

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_strong_maximum_test.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Test the design point with the Strong Maximum Test</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Time variant system reliability problem">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_proba_system_event_thumb.png
    :alt: Time variant system reliability problem

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_proba_system_event.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Time variant system reliability problem</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Axial stressed beam : comparing different methods to estimate a probability">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_axial_stressed_beam_thumb.png
    :alt: Axial stressed beam : comparing different methods to estimate a probability

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_axial_stressed_beam.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Axial stressed beam : comparing different methods to estimate a probability</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create unions or intersections of events">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_event_system_thumb.png
    :alt: Create unions or intersections of events

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_event_system.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create unions or intersections of events</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An illustrated example of a FORM probability estimate">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_form_explained_thumb.png
    :alt: An illustrated example of a FORM probability estimate

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_form_explained.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">An illustrated example of a FORM probability estimate</div>
    </div>


.. raw:: html

    </div>


Reliability processes
---------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create an event based on a process">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability_processes/images/thumb/sphx_glr_plot_event_process_thumb.png
    :alt: Create an event based on a process

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_processes_plot_event_process.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create an event based on a process</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a process-based event probability">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability_processes/images/thumb/sphx_glr_plot_estimate_probability_monte_carlo_process_thumb.png
    :alt: Estimate a process-based event probability

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_processes_plot_estimate_probability_monte_carlo_process.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a process-based event probability</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate Sobol indices on a field to point function">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability_processes/images/thumb/sphx_glr_plot_field_fca_sobol_thumb.png
    :alt: Estimate Sobol indices on a field to point function

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_processes_plot_field_fca_sobol.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate Sobol indices on a field to point function</div>
    </div>


.. raw:: html

    </div>


Sensitivity analysis
--------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="FAST sensitivity indices">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_fast_thumb.png
    :alt: FAST sensitivity indices

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_fast.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FAST sensitivity indices</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Parallel coordinates graph as sensitivity tool">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_par_coo_thumb.png
    :alt: Parallel coordinates graph as sensitivity tool

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_par_coo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parallel coordinates graph as sensitivity tool</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate Sobol&#x27; indices for a function with multivariate output">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_sobol_multivariate_thumb.png
    :alt: Estimate Sobol' indices for a function with multivariate output

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_sobol_multivariate.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate Sobol' indices for a function with multivariate output</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sobol&#x27; sensitivity indices from chaos">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_functional_chaos_sensitivity_thumb.png
    :alt: Sobol' sensitivity indices from chaos

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_functional_chaos_sensitivity.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sobol' sensitivity indices from chaos</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the ANCOVA indices">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_ancova_thumb.png
    :alt: Use the ANCOVA indices

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_ancova.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the ANCOVA indices</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate Sobol&#x27; indices for the Ishigami function by a sampling method: a quick start guide to ...">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_sobol_thumb.png
    :alt: Estimate Sobol' indices for the Ishigami function by a sampling method: a quick start guide to sensitivity analysis

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_sobol.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate Sobol' indices for the Ishigami function by a sampling method: a quick start guide to sensitivity analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The HSIC sensitivity indices: the Ishigami model">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_hsic_estimators_ishigami_thumb.png
    :alt: The HSIC sensitivity indices: the Ishigami model

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_hsic_estimators_ishigami.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">The HSIC sensitivity indices: the Ishigami model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example of sensitivity analyses on the wing weight model">

.. only:: html

  .. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_wingweight_thumb.png
    :alt: Example of sensitivity analyses on the wing weight model

  :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_wingweight.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Example of sensitivity analyses on the wing weight model</div>
    </div>


.. raw:: html

    </div>


Design of experiments
---------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a composite design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_composite_experiment_thumb.png
    :alt: Create a composite design of experiments

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_composite_experiment.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a composite design of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a Monte Carlo design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_monte_carlo_experiment_thumb.png
    :alt: Create a Monte Carlo design of experiments

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_monte_carlo_experiment.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a Monte Carlo design of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Probabilistic design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_probabilistic_design_thumb.png
    :alt: Probabilistic design of experiments

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_probabilistic_design.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Probabilistic design of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a Gauss product design">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_gauss_product_experiment_thumb.png
    :alt: Create a Gauss product design

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_gauss_product_experiment.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a Gauss product design</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a random design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_create_random_doe_thumb.png
    :alt: Create a random design of experiments

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_create_random_doe.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a random design of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create mixed deterministic and probabilistic designs of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_mixed_design_thumb.png
    :alt: Create mixed deterministic and probabilistic designs of experiments

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_mixed_design.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create mixed deterministic and probabilistic designs of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a design of experiments with discrete and continuous variables">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_design_of_experiment_continuous_discrete_thumb.png
    :alt: Create a design of experiments with discrete and continuous variables

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_design_of_experiment_continuous_discrete.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a design of experiments with discrete and continuous variables</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The goal of this example is to present the features of the PlotDesign static method.">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_plot_design_thumb.png
    :alt: The PlotDesign method

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_plot_design.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">The PlotDesign method</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Deterministic design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_deterministic_design_thumb.png
    :alt: Deterministic design of experiments

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_deterministic_design.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Deterministic design of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a deterministic design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_create_deterministic_doe_thumb.png
    :alt: Create a deterministic design of experiments

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_create_deterministic_doe.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a deterministic design of experiments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Various design of experiments in OpenTURNS">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_design_of_experiments_thumb.png
    :alt: Various design of experiments in OpenTURNS

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_design_of_experiments.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Various design of experiments in OpenTURNS</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Generate low discrepancy sequences">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_low_discrepancy_sequence_thumb.png
    :alt: Generate low discrepancy sequences

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_low_discrepancy_sequence.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Generate low discrepancy sequences</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Optimize an LHS design of experiments">

.. only:: html

  .. image:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_optimal_lhs_thumb.png
    :alt: Optimize an LHS design of experiments

  :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_optimal_lhs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Optimize an LHS design of experiments</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:

   /auto_reliability_sensitivity/central_dispersion/index.rst
   /auto_reliability_sensitivity/reliability/index.rst
   /auto_reliability_sensitivity/reliability_processes/index.rst
   /auto_reliability_sensitivity/sensitivity_analysis/index.rst
   /auto_reliability_sensitivity/design_of_experiments/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: auto_reliability_sensitivity_python.zip </auto_reliability_sensitivity/auto_reliability_sensitivity_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: auto_reliability_sensitivity_jupyter.zip </auto_reliability_sensitivity/auto_reliability_sensitivity_jupyter.zip>`
